# ai-dialogue-tui

./: .bandit.yml  .coverage  .flake8  .gitignore  .pylintrc  ARCHITECTURE.md  KODA.md  LICENSE  QWEN.md  README.md  REFACTOR_COMPLETION_REPORT.md  REFACTOR_PLAN.md  TESTS_REGISTRY.md  _refactor_registry.md  config.py  main.py  pyproject.toml  pytest.ini  refactor_plan.md  requirements.txt
.github/: COMMIT_MESSAGE
audit_reports/: analysis_report.txt  analyze_test.py  run_analysis.py  test_files.txt
controllers/: __init__.py  dialogue_controller.py
factories/: __init__.py  provider_factory.py
logs/: dialogue_20260426_193508.txt  dialogue_20260426_201617.txt
models/: __init__.py  config.py  conversation.py  ollama_client.py  provider.py
services/: __init__.py  dialogue_runner.py  dialogue_service.py  model_style_mapper.py
tests/: __init__.py  conftest.py  test_arch_audit_fixes.py  test_arch_fixes.py  test_architecture.py  test_architecture_integrity.py  test_architecture_patterns.py  test_architecture_refactor.py  test_audit_fixes.py  test_audit_fixes_verification.py  test_batch01_fixes.py  test_batch01_refactor.py  test_batch02_refactor.py  test_batch03_fixes.py  test_call_from_thread_fix.py  test_code_audit_fixes.py  test_code_audit_fixes_verification.py  test_critical.py  test_dialogue_runner_error_handling.py  test_fixes.py  test_new_audit_fixes.py  test_textual_reactive.py  test_timeout_fixes.py  test_ui_nomatches_handling.py  test_ui_shutdown_error.py  test_ui_state_changed.py
tui/: __init__.py  app.py  constants.py  sanitizer.py  styles.py
