[project]
name = "ai-dialogue-tui"
version = "0.1.0"
description = "TUI для диалога двух ИИ-моделей через Ollama"
requires-python = ">=3.10"
dependencies = [
    "textual==0.49.0",
    "aiohttp==3.9.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "tests/",
    "audit_reports/",
    ".git/",
    "__pycache__/",
    ".mypy_cache/",
    ".ruff_cache/",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "D",     # docstrings
    "RUF",   # Ruff-specific rules
    "TRY",   # tryceratops
    "LOG",   # logging rules
    "PLC",   # Pylint conventions
    "PLR",   # Pylint refactoring
    "ANN",   # annotations
    "UP",    # pyupgrade
    "S",     # bandit
]
ignore = [
    "E501",      # line too long
    "RUF001",    # string without f-string
    "RUF002",    # ambiguous character
    "RUF003",    # datetime instead of time
    "D102",      # missing docstring in public method
    "D107",      # missing docstring in __init__
    "D212",      # multi-line docstring summary on first line
    "D213",      # multi-line docstring summary on different line
    "ANN401",    # dynamically typed attribute
    "RUF012",    # mutable class attributes
    "S101",      # assert used (bandit)
    "ARG002",    # unused variable in lambda
    "PLC0415",   # import outside toplevel
    "TRY300",    # consider try-instead of else-return
    "TRY401",    # verbose exception
    "LOG015",    # logging f-string
    "PLR0911",   # too many returns
    "UP047",     # use a version of class without subscript
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
explicit_package_bases = true
exclude = [
    "tests/",
    "audit_reports/",
]

[tool.pylint]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "design",         # subjective design rules
    "refactoring",   # subjective refactoring rules
    "similarities",   # line similarity checks
    "W2301",         # unnecessary-ellipsis false positive
]

[tool.pylint.basic]
good-names-rgxs = "^[i-jk]$|^[a-z][a-z0-9_]*[a-z]$|^ex$|^Run$|^id$|^ok$"

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 15
max-statements = 60
max-attributes = 15
max-public-methods = 25

[tool.pylint.exceptions]
overgeneral-exceptions = "builtins.Exception"